src/main/java/com/example/rejectionapp/methods/TestGrabs.java
package com.example.rejectionapp.methods;

public class TestGrabs {


    public static void main(String... args) {
        Selection selection = new Selection();
        selection.Sigm();
    }


}